Add about text. v2

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
     {{>header}}
-    <p>This site by Ebaduddin Mohammed. It uses data from visualcrossing.com and positionstack.com!</p>
+    <p>This site was created by Ebaduddin Mohammed. It uses data from visualcrossing.com and positionstack.com!</p>
     <img class = "portrait" src="/img/me.jpg">        
     </div>
     
